<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    grid:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="vpchc.prohealth.MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        grid:columnCount="3"
        grid:rowCount="3"
        grid:orientation="horizontal"
        grid:layout_weight="2"
        grid:alignmentMode="alignBounds"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp"
        android:id="@+id/gridLayout">


        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/contactus2"
            />
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/providers2"
            />
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/locations2"
            />
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/forms2"
            />
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/patientportal2"
        />
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/programs2"
            />
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/bustracker2"
            />
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/jobs2"
            />
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            grid:layout_weight="1"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            android:src="@drawable/facebook2"
            />
    </android.support.v7.widget.GridLayout>
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        grid:columnCount="3"
        grid:rowCount="3"
        grid:orientation="horizontal"
        grid:layout_weight="2"
        android:layout_marginTop="55dp"
        android:id="@+id/gridLayout">

    <TextView
        android:id="@+id/text_contact_us"
        android:text="@string/icon_contact_us"
        android:textColor='#000000'
        android:textSize="20sp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        :gravity="bottom"
        />
    <TextView
        android:id="@+id/text_providers"
        android:text="@string/icon_providers"
        android:textColor='#000000'
        android:textSize="20sp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        />
    <TextView
        android:id="@+id/text_locations"
        android:text="@string/icon_locations"
        android:textColor='#000000'
        android:textSize="20sp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        />



    <TextView
        android:id="@+id/text_forms"
        android:text="@string/icon_forms"
        android:textColor='#000000'
        android:textSize="20sp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        />
    <TextView
        android:id="@+id/text_patient_portal"
        android:text="@string/icon_patient_portal"
        android:textColor='#000000'
        android:textSize="20sp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        />
    <TextView
        android:id="@+id/text_programs"
        android:text="@string/icon_programs"
        android:textColor='#000000'
        android:textSize="20sp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        />



    <TextView
        android:id="@+id/text_bustracker"
        android:text="@string/icon_bustracker"
        android:textColor='#000000'
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        />
    <TextView
        android:id="@+id/text_job_openings"
        android:text="@string/icon_job_openings"
        android:textColor='#000000'
        android:textSize="20sp"
        android:layout_marginLeft="14dp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        />
    <TextView
        android:id="@+id/text_facebook"
        android:text="@string/icon_facebook"
        android:textColor='#000000'
        android:textSize="20sp"
        grid:layout_weight="1"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_gravity="center"
        />

    </android.support.v7.widget.GridLayout>
</RelativeLayout>

